[project]
name = "mephew-python-commons"
version = "1.0.0"
description = "Common utilities for Python projects"
requires-python = ">=3.7"
authors = [{ name="Mateusz Basiaga", email="basmateusz@wp.pl" }]
dependencies = [
    "concurrent-log-handler>=0.9.28",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
